--- a/src/main/webapp/app/entities/core/media/media.component.html
+++ b/src/main/webapp/app/entities/core/media/media.component.html
@@ -33,20 +33,20 @@
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="thumbnail"><span jhiTranslate="gatewayApp.coreMedia.thumbnail">Thumbnail</span></th>
-            <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreMedia.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="title"><span jhiTranslate="gatewayApp.coreMedia.title">Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreMedia.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="type"><span jhiTranslate="gatewayApp.coreMedia.type">Type</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <!--<th jhiSortBy="url"><span jhiTranslate="gatewayApp.coreMedia.url">Url</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="fileSize"><span jhiTranslate="gatewayApp.coreMedia.fileSize">File Size</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="dimensions"><span jhiTranslate="gatewayApp.coreMedia.dimensions">Dimensions</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="title"><span jhiTranslate="gatewayApp.coreMedia.title">Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="caption"><span jhiTranslate="gatewayApp.coreMedia.caption">Caption</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="dimensions"><span jhiTranslate="gatewayApp.coreMedia.dimensions">Dimensions</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+            <!--<th jhiSortBy="caption"><span jhiTranslate="gatewayApp.coreMedia.caption">Caption</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="altText"><span jhiTranslate="gatewayApp.coreMedia.altText">Alt Text</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreMedia.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreMedia.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="uploadedBy"><span jhiTranslate="gatewayApp.coreMedia.uploadedBy">Uploaded By</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="publishedDate"><span jhiTranslate="gatewayApp.coreMedia.publishedDate">Published Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="publishedDate"><span jhiTranslate="gatewayApp.coreMedia.publishedDate">Published Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreMedia.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreMedia.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreMedia.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreMedia.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreMedia.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
@@ -55,20 +55,20 @@
             <tr *ngFor="let media of media ;trackBy: trackId">
                 <!--<td><a [routerLink]="['/media', media.id, 'view' ]">{{media.id}}</a></td>-->
                 <td><img src={{media.url}} alt="Image" width="100" height="100"></td>
-                <td>{{media.name}}</td>
+                <td>{{media.title}}</td>
+                <!--<td>{{media.name}}</td>-->
                 <td>{{media.type}}</td>
                 <!--<td>{{media.url}}</td>-->
                 <td>{{media.fileSize}}</td>
-                <td>{{media.dimensions}}</td>
-                <td>{{media.title}}</td>
+                <!--<td>{{media.dimensions}}</td>
                 <td>{{media.caption}}</td>
                 <td>{{media.altText}}</td>
-                <td>{{media.description}}</td>
+                <td>{{media.description}}</td>-->
                 <td>{{media.uploadedBy}}</td>
-                <td>{{media.publishedDate | date:'medium'}}</td>
+                <!--<td>{{media.publishedDate | date:'medium'}}</td>
                 <td>{{media.lastUpdatedDate | date:'medium'}}</td>
                 <td>{{media.slug}}</td>
-                <td>{{media.clientId}}</td>
+                <td>{{media.clientId}}</td>-->
                 <td>{{media.createdDate | date:'medium'}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
