--- a/src/main/webapp/app/entities/core/organization/organization.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization.component.html
@@ -29,14 +29,14 @@
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+            <th jhiSortBy="logoURL"><span jhiTranslate="gatewayApp.coreOrganization.logoURL">Logo URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreOrganization.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="phone"><span jhiTranslate="gatewayApp.coreOrganization.phone">Phone</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="siteTitle"><span jhiTranslate="gatewayApp.coreOrganization.siteTitle">Site Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="tagLine"><span jhiTranslate="gatewayApp.coreOrganization.tagLine">Tag Line</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreOrganization.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="logoURL"><span jhiTranslate="gatewayApp.coreOrganization.logoURL">Logo URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="logoURLMobile"><span jhiTranslate="gatewayApp.coreOrganization.logoURLMobile">Logo URL Mobile</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="tagLine"><span jhiTranslate="gatewayApp.coreOrganization.tagLine">Tag Line</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+            <!--<th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreOrganization.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+            <!--<th jhiSortBy="logoURLMobile"><span jhiTranslate="gatewayApp.coreOrganization.logoURLMobile">Logo URL Mobile</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="favIconURL"><span jhiTranslate="gatewayApp.coreOrganization.favIconURL">Fav Icon URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="mobileIconURL"><span jhiTranslate="gatewayApp.coreOrganization.mobileIconURL">Mobile Icon URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="baiduVerificationCode"><span jhiTranslate="gatewayApp.coreOrganization.baiduVerificationCode">Baidu Verification Code</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -65,27 +65,27 @@
             <th jhiSortBy="linkedInClientSecret"><span jhiTranslate="gatewayApp.coreOrganization.linkedInClientSecret">Linked In Client Secret</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="instagramClientId"><span jhiTranslate="gatewayApp.coreOrganization.instagramClientId">Instagram Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="instagramClientSecret"><span jhiTranslate="gatewayApp.coreOrganization.instagramClientSecret">Instagram Client Secret</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="mailchimpAPIKey"><span jhiTranslate="gatewayApp.coreOrganization.mailchimpAPIKey">Mailchimp API Key</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="mailchimpAPIKey"><span jhiTranslate="gatewayApp.coreOrganization.mailchimpAPIKey">Mailchimp API Key</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="siteLanguage"><span jhiTranslate="gatewayApp.coreOrganization.siteLanguage">Site Language</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="timeZone"><span jhiTranslate="gatewayApp.coreOrganization.timeZone">Time Zone</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="timeZone"><span jhiTranslate="gatewayApp.coreOrganization.timeZone">Time Zone</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreOrganization.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreOrganization.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="email"><span jhiTranslate="gatewayApp.coreOrganization.email">Email</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreOrganization.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreOrganization.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreOrganization.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let organization of organizations ;trackBy: trackId">
-                <td><a [routerLink]="['/organization', organization.id, 'view' ]">{{organization.id}}</a></td>
+                <!--<td><a [routerLink]="['/organization', organization.id, 'view' ]">{{organization.id}}</a></td>-->
+                <td>{{organization.logoURL}}</td>
                 <td>{{organization.name}}</td>
                 <td>{{organization.phone}}</td>
                 <td>{{organization.siteTitle}}</td>
-                <td>{{organization.tagLine}}</td>
-                <td>{{organization.description}}</td>
-                <td>{{organization.logoURL}}</td>
-                <td>{{organization.logoURLMobile}}</td>
+                <!--<td>{{organization.tagLine}}</td>-->
+               <!-- <td>{{organization.description}}</td>-->
+                <!--<td>{{organization.logoURLMobile}}</td>
                 <td>{{organization.favIconURL}}</td>
                 <td>{{organization.mobileIconURL}}</td>
                 <td>{{organization.baiduVerificationCode}}</td>
@@ -114,14 +114,14 @@
                 <td>{{organization.linkedInClientSecret}}</td>
                 <td>{{organization.instagramClientId}}</td>
                 <td>{{organization.instagramClientSecret}}</td>
-                <td>{{organization.mailchimpAPIKey}}</td>
+                <td>{{organization.mailchimpAPIKey}}</td>-->
                 <td>{{organization.siteLanguage}}</td>
-                <td>{{organization.timeZone}}</td>
+                <!--<td>{{organization.timeZone}}</td>-->
                 <td>{{organization.clientId}}</td>
                 <td>{{organization.slug}}</td>
                 <td>{{organization.email}}</td>
                 <td>{{organization.createdDate | date:'medium'}}</td>
-                <td>{{organization.lastUpdatedDate | date:'medium'}}</td>
+                <!--<td>{{organization.lastUpdatedDate | date:'medium'}}</td>-->
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
