--- a/src/main/webapp/app/entities/core/tag/tag.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag.component.html
@@ -29,25 +29,25 @@
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="name"><span jhiTranslate="gatewayApp.coreTag.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreTag.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreTag.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreTag.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreTag.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreTag.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreTag.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreTag.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let tag of tags ;trackBy: trackId">
-                <td><a [routerLink]="['/tag', tag.id, 'view' ]">{{tag.id}}</a></td>
+                <!--<td><a [routerLink]="['/tag', tag.id, 'view' ]">{{tag.id}}</a></td>-->
                 <td>{{tag.name}}</td>
                 <td>{{tag.slug}}</td>
                 <td>{{tag.description}}</td>
-                <td>{{tag.clientId}}</td>
+                <!--<td>{{tag.clientId}}</td>-->
                 <td>{{tag.createdDate | date:'medium'}}</td>
-                <td>{{tag.lastUpdatedDate | date:'medium'}}</td>
+                <!--<td>{{tag.lastUpdatedDate | date:'medium'}}</td>-->
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
