--- a/src/main/webapp/app/entities/core/role/role-update.component.html
+++ b/src/main/webapp/app/entities/core/role/role-update.component.html
@@ -20,7 +20,7 @@
                         </small>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" *ngIf="show">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreRole.clientId" for="field_clientId">Client Id</label>
                     <input type="text" class="form-control" name="clientId" id="field_clientId"
                         [(ngModel)]="role.clientId" required/>
@@ -31,7 +31,7 @@
                         </small>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" *ngIf="show">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreRole.isDefault" for="field_isDefault">Is Default</label>
                     <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
                         [(ngModel)]="role.isDefault" />
