--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -57,7 +57,7 @@
                         <span [(ngModel)]="rating.iconURL" name="iconURL" ngDefaultControl></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" *ngIf="showClientId">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.isDefault" for="field_isDefault">Is Default</label>
                     <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
                         [(ngModel)]="rating.isDefault" />
