--- a/src/main/webapp/app/entities/core/organization/organization-update.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-update.component.html
@@ -43,8 +43,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreOrganization.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="organization.description" />
+                    <textarea rows="5" class="form-control" name="description" id="field_description"
+                              [(ngModel)]="organization.description" ></textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreOrganization.logoURL" for="field_logoURL">Logo URL</label>
