--- a/src/main/webapp/app/entities/core/tag/tag-update.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag-update.component.html
@@ -33,8 +33,8 @@
                 </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreTag.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="tag.description" />
+                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
+                              [(ngModel)]="tag.description" ></textarea>
                 </div>
                 <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreTag.clientId" for="field_clientId">Client Id</label>
