--- a/src/main/webapp/app/entities/core/category/category-update.component.html
+++ b/src/main/webapp/app/entities/core/category/category-update.component.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="category.description" />
+                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
+                              [(ngModel)]="category.description" ></textarea>
                 </div>
                <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreCategory.slug" for="field_slug">Slug</label>
