--- a/src/main/webapp/app/entities/core/format/format-update.component.html
+++ b/src/main/webapp/app/entities/core/format/format-update.component.html
@@ -38,8 +38,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="format.description" />
+                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
+                              [(ngModel)]="format.description" ></textarea>
                 </div>
                 <!--<div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.slug" for="field_slug">Slug</label>
