--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.excerpt" for="field_excerpt">Excerpt</label>
-                    <input type="text" class="form-control" name="excerpt" id="field_excerpt"
-                        [(ngModel)]="post.excerpt" />
+                    <textarea rows="5" type="text" class="form-control" name="excerpt" id="field_excerpt"
+                              [(ngModel)]="post.excerpt" ></textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.featured" for="field_featured">Featured</label>
