--- a/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-update.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.description" for="field_description">Description</label>
-                    <quill-editor [(ngModel)]="claim.description" name="description" id="field_description" [style]="{height: '200px'}"></quill-editor>
+                    <quill-editor [(ngModel)]="claim.description" name="description" id="field_description" [style]="{height: '200px'}" required></quill-editor>
                     <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.description?.errors?.required" jhiTranslate="entity.validation.required">
@@ -69,8 +69,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.reviewSources" for="field_reviewSources">Review Sources</label>
-                    <input type="text" class="form-control" name="reviewSources" id="field_reviewSources"
-                        [(ngModel)]="claim.reviewSources" required/>
+                    <textarea rows="5" type="text" class="form-control" name="reviewSources" id="field_reviewSources"
+                              [(ngModel)]="claim.reviewSources" required ></textarea>
                     <div [hidden]="!(editForm.controls.reviewSources?.dirty && editForm.controls.reviewSources?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.reviewSources?.errors?.required" jhiTranslate="entity.validation.required">
@@ -80,8 +80,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaim.review" for="field_review">Review</label>
-                    <input type="text" class="form-control" name="review" id="field_review"
-                        [(ngModel)]="claim.review" required/>
+                    <textarea rows="5" type="text" class="form-control" name="review" id="field_review"
+                              [(ngModel)]="claim.review" required ></textarea>
                     <div [hidden]="!(editForm.controls.review?.dirty && editForm.controls.review?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.review?.errors?.required" jhiTranslate="entity.validation.required">
