--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaimant.description" for="field_description">Description</label>
-                    <input type="text" class="form-control" name="description" id="field_description"
-                        [(ngModel)]="claimant.description" />
+                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
+                              [(ngModel)]="claimant.description" ></textarea>
                 </div>
                 <div class="form-group">
                     <!--<label class="form-control-label" jhiTranslate="gatewayApp.factcheckClaimant.imageURL" for="field_imageURL">Image URL</label>
