47: Made standard as default selection and display options in ascending order for Format in Post

--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -85,8 +85,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.format" for="field_format">Format</label>
                     <select class="form-control" id="field_format" name="format" [(ngModel)]="post.formatId"  required>
-                        <option *ngIf="!editForm.value.format" [ngValue]="null" selected></option>
-                        <option [ngValue]="formatOption.id" *ngFor="let formatOption of formats; trackBy: trackFormatById">{{formatOption.name}}</option>
+                        <option [ngValue]="formatOption.id" *ngFor="let formatOption of formats | orderBy:'name'; trackBy: trackFormatById">{{formatOption.name}}</option>
                     </select>
                 </div>
                 <div [hidden]="!(editForm.controls.format?.dirty && editForm.controls.format?.invalid)">
