removed jhipster logo and changed the content on the homepage

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <fa-icon [icon]="'bars'"></fa-icon>
         </a>
         <a class="navbar-brand logo float-left" routerLink="/" (click)="collapseNavbar()">
-            <span class="logo-img"></span>
+            <!--<span class="logo-img"></span>-->
             <span jhiTranslate="global.title" class="navbar-title">Gateway</span> <span class="navbar-version">{{version}}</span>
         </a>
     </div>
