--- a/src/main/webapp/app/entities/factcheck/rating/rating.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating.component.html
@@ -45,7 +45,7 @@
             <tbody>
             <tr *ngFor="let rating of ratings ;trackBy: trackId">
                 <!--<td><a [routerLink]="['/rating', rating.id, 'view' ]">{{rating.id}}</a></td>-->
-                <td>{{rating.iconURL}}</td>
+                <td><img src={{rating.iconURL}} alt="" width="100" height="100"></td>
                 <td>{{rating.name}}</td>
                 <td>{{rating.numericValue}}</td>
                 <td>{{rating.isDefault}}</td>
