--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-detail.component.html
@@ -19,7 +19,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.summary">Summary</span></dt>
                 <dd>
-                    <span>{{factcheck.summary}}</span>
+                    <span [innerHtml]="factcheck.summary"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckFactcheck.excerpt">Excerpt</span></dt>
                 <dd>
