--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <!--<div class="col-md-3">
+    <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
-    </div>-->
-    <div class="col-md-12">
+    </div>
+    <div class="col-md-9">
         <h1 class="display-4" jhiTranslate="home.title">Welcome, Factchecker!</h1>
         <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
